# openengine

./: .gitignore  CMakeLists.txt
include/: application.h  camera.h  gameobject.h  glad.h  material.h  mesh.h  texture.h
include/abstract/: component.h  disposable.h
src/: application.cpp  camera.cpp  gameobject.cpp  glad.c  material.cpp  mesh.cpp  shader.frag  shader.vs  texture.cpp
src/abstract/: component.cpp  disposable.cpp
src/modules/bsp/: bsp.cpp  bsp.h  main.cpp  mdl.h
